--- a/.github/workflows/manual-iac-teardown.yml
+++ b/.github/workflows/manual-iac-teardown.yml
@@ -1,14 +1,19 @@
-name: Manual IaC Provisioning
+name: Manual IaC Teardown
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # manual trigger
 
 jobs:
-  terraform:
+  terraform-destroy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -19,10 +24,6 @@ jobs:
         working-directory: ./infra
         run: terraform init
 
-      - name: Terraform Plan
+      - name: Terraform Destroy
         working-directory: ./infra
-        run: terraform plan -out=tfplan
-
-      # - name: Terraform Apply
-      #   working-directory: ./infra
-      #   run: terraform apply -auto-approve tfplan
+        run: terraform destroy -auto-approve
