--- a/.github/workflows/3-production-deploy.yml
+++ b/.github/workflows/3-production-deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  call-deploy:
+  deploy:
     uses: ./.github/workflows/plugin/deploy.yml
     with:
       NAMESPACE: production
