--- a/.github/workflows/plugin-create-pull-request.yml
+++ b/.github/workflows/plugin-create-pull-request.yml
@@ -12,19 +12,6 @@ on:
         required: true
         default: "main"
 
-  workflow_call:
-    inputs:
-      SOURCE_BRANCH:
-        required: true
-        type: string
-      TARGET_BRANCH:
-        required: true
-        type: string
-
-permissions:
-  contents: write
-  pull-requests: write
-
 jobs:
   create-pr:
     runs-on: ubuntu-latest
@@ -40,24 +27,22 @@ jobs:
       - name: Authenticate GitHub CLI
         run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
-      - name: Determine source and target branches
-        id: vars
-        run: |
-          echo "SOURCE_BRANCH=${{ github.event.inputs.SOURCE_BRANCH || inputs.SOURCE_BRANCH }}" >> $GITHUB_ENV
-          echo "TARGET_BRANCH=${{ github.event.inputs.TARGET_BRANCH || inputs.TARGET_BRANCH }}" >> $GITHUB_ENV
-
-      - name: Check if branch has changes
-        run: |
-          git fetch origin $SOURCE_BRANCH $TARGET_BRANCH
-          if git diff --quiet origin/$TARGET_BRANCH..origin/$SOURCE_BRANCH; then
-            echo "⚠️ No changes between $SOURCE_BRANCH and $TARGET_BRANCH. Skipping PR."
-            exit 0
-          fi
-
       - name: Create PR
+        env:
+          SOURCE_BRANCH: ${{ github.event.inputs.SOURCE_BRANCH }}
+          TARGET_BRANCH: ${{ github.event.inputs.TARGET_BRANCH }}
         run: |
-          gh pr create \
+          echo "➡️ Attempting to create PR from $SOURCE_BRANCH to $TARGET_BRANCH"
+          if ! gh pr create \
             --base "$TARGET_BRANCH" \
             --head "$SOURCE_BRANCH" \
             --title "Automated PR: $SOURCE_BRANCH → $TARGET_BRANCH" \
-            --body "This PR was created by CI to merge changes from **$SOURCE_BRANCH** into **$TARGET_BRANCH**."
+            --body "This PR was created by CI to merge changes from **$SOURCE_BRANCH** into **$TARGET_BRANCH**."; then
+              echo "⚠️ No PR created — most likely because there are no new commits between $SOURCE_BRANCH and $TARGET_BRANCH."
+              echo "### ⚠️ No PR Created" >> $GITHUB_STEP_SUMMARY
+              echo "Branches \`$SOURCE_BRANCH\` and \`$TARGET_BRANCH\` are already in sync. Nothing to merge." >> $GITHUB_STEP_SUMMARY
+              exit 0
+          else
+              echo "### ✅ PR Created" >> $GITHUB_STEP_SUMMARY
+              echo "A pull request was successfully created from \`$SOURCE_BRANCH\` → \`$TARGET_BRANCH\`." >> $GITHUB_STEP_SUMMARY
+          fi
