--- a/.github/workflows/plugin-create-pull-request.yml
+++ b/.github/workflows/plugin-create-pull-request.yml
@@ -1,4 +1,4 @@
-name: Plugin - Create Pull Request
+name: Plugin - Create Traditional Pull Request
 
 on:
   workflow_dispatch:
@@ -12,37 +12,35 @@ on:
         required: true
         default: "main"
 
+  workflow_call:
+    inputs:
+      SOURCE_BRANCH:
+        required: true
+        type: string
+      TARGET_BRANCH:
+        required: true
+        type: string
+
 jobs:
-  create-pr:
+  create-traditional-pr:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up GitHub CLI
+      - name: Install GitHub CLI
         run: |
-          sudo apt-get update
+          sudo apt-get update -y
           sudo apt-get install -y gh
 
       - name: Authenticate GitHub CLI
         run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
       - name: Create PR
-        env:
-          SOURCE_BRANCH: ${{ github.event.inputs.SOURCE_BRANCH }}
-          TARGET_BRANCH: ${{ github.event.inputs.TARGET_BRANCH }}
         run: |
-          echo "➡️ Attempting to create PR from $SOURCE_BRANCH to $TARGET_BRANCH"
-          if ! gh pr create \
-            --base "$TARGET_BRANCH" \
-            --head "$SOURCE_BRANCH" \
-            --title "Automated PR: $SOURCE_BRANCH → $TARGET_BRANCH" \
-            --body "This PR was created by CI to merge changes from **$SOURCE_BRANCH** into **$TARGET_BRANCH**."; then
-              echo "⚠️ No PR created — most likely because there are no new commits between $SOURCE_BRANCH and $TARGET_BRANCH."
-              echo "### ⚠️ No PR Created" >> $GITHUB_STEP_SUMMARY
-              echo "Branches \`$SOURCE_BRANCH\` and \`$TARGET_BRANCH\` are already in sync. Nothing to merge." >> $GITHUB_STEP_SUMMARY
-              exit 0
-          else
-              echo "### ✅ PR Created" >> $GITHUB_STEP_SUMMARY
-              echo "A pull request was successfully created from \`$SOURCE_BRANCH\` → \`$TARGET_BRANCH\`." >> $GITHUB_STEP_SUMMARY
-          fi
+          gh pr create \
+            --base "${{ github.event.inputs.TARGET_BRANCH || github.inputs.TARGET_BRANCH }}" \
+            --head "${{ github.event.inputs.SOURCE_BRANCH || github.inputs.SOURCE_BRANCH }}" \
+            --title "Automated PR: ${ { github.event.inputs.SOURCE_BRANCH || github.inputs.SOURCE_BRANCH }} → ${ { github.event.inputs.TARGET_BRANCH || github.inputs.TARGET_BRANCH }}" \
+            --body "This PR was created automatically by CI."
