--- a/.github/workflows/2-staging-deploy.yml
+++ b/.github/workflows/2-staging-deploy.yml
@@ -1,6 +1,7 @@
 name: Stage2 - Staging Deployment
 
 on:
+  workflow_dispatch:
   workflow_run:
     workflows: ["Stage1 - CI Pipeline - Staging Branch"]
     types:
