--- a/.github/workflows/4-monitoring.yml
+++ b/.github/workflows/4-monitoring.yml
@@ -1,6 +1,7 @@
 name: Stage4 - Monitoring Setup
 
 on:
+  workflow_dispatch:
   workflow_run:
     workflows: ["Stage3 - Production Deployment"]
     types:
