--- a/.github/workflows/plugin-send-email.yml
+++ b/.github/workflows/plugin-send-email.yml
@@ -1,8 +1,21 @@
 name: Plugin - Send Email
 
 on:
-  workflow_dispatch: # allows manual trigger
-  workflow_call: # allows other workflows to call this
+  workflow_dispatch:
+    inputs:
+      email_to:
+        description: "Recipient email"
+        required: true
+        default: "default@example.com"
+      email_subject:
+        description: "Email subject"
+        required: true
+        default: "GitHub Actions Notification"
+      email_body:
+        description: "Email body"
+        required: true
+        default: "This is an automated email."
+  workflow_call:
     inputs:
       email_to:
         description: "Recipient email"
