--- a/.github/workflows/plugin-send-email.yml
+++ b/.github/workflows/plugin-send-email.yml
@@ -43,10 +43,14 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        run: npm install nodemailer
+        run: |
+          cd util
+          npm install nodemailer
 
       - name: Send Email
-        run: node scripts/sendEmail.js
+        run: |
+          cd util
+          node scripts/sendEmail.js
         env:
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
